enforce java 8 compat and allow output directory to be configured